Implement a cache for masked brushes by KisPresetShadowUpdater

Masked brushes are initialized in two steps:

1) KisPresetShadowUpdater calls KisPaintOpPreset::coldInitInForeground()
   to create the cache of the masking preset in the GUI thread (to be able
   to fetch resources needed by the masking preset)

2) KisPresetShadowUpdater calls KisPaintOpPreset::coldInitInBackground()
   to regenerate caches of the masking preset, like outline and pyramid.

BUG:436731