libs/image/brushengine/kis_paintop_preset.cpp
@@ -55,6 +55,9 @@ struct Q_DECL_HIDDEN KisPaintOpPreset::Private {
             if (proxy) {
                 proxy->notifySettingsChanged();
             }
+
+            // reset the cached masking preset
+            m_parentPreset->d->cachedMaskingPreset.clear();
         }
 
     private:
@@ -70,6 +73,7 @@ public:
     KisPaintOpSettingsSP settings {0};
     QScopedPointer<KisPaintOpPresetUpdateProxy> updateProxy;
     KisPaintOpSettings::UpdateListenerSP settingsUpdateListener;
+    KisPaintOpPresetSP cachedMaskingPreset;
 };
 
 
@@ -104,6 +108,10 @@ KisPaintOpPreset::KisPaintOpPreset(const KisPaintOpPreset &rhs)
 
     setName(rhs.name());
     setImage(rhs.image());
+
+    if (rhs.d->cachedMaskingPreset) {
+        d->cachedMaskingPreset = rhs.d->cachedMaskingPreset->clone().dynamicCast<KisPaintOpPreset>();
+    }
 }
 
 KoResourceSP KisPaintOpPreset::clone() const
@@ -144,6 +152,8 @@ void KisPaintOpPreset::setSettings(KisPaintOpSettingsSP settings)
         d->settings = settings->clone();
         d->settings->setUpdateListener(d->settingsUpdateListener);
     }
+
+    d->cachedMaskingPreset.clear();
 
     if (d->updateProxy) {
         d->updateProxy->notifyUniformPropertiesChanged();
@@ -410,14 +420,17 @@ bool KisPaintOpPreset::hasMaskingPreset() const
 
 KisPaintOpPresetSP KisPaintOpPreset::createMaskingPreset() const
 {
-    KisPaintOpPresetSP result;
+    KisPaintOpPresetSP result = d->cachedMaskingPreset;
 
-    if (d->settings && d->settings->hasMaskingSettings()) {
-        result.reset(new KisPaintOpPreset());
-        result->setSettings(d->settings->createMaskingSettings());
-        if (!result->valid()) {
-            result.clear();
+    if (!result) {
+        if (d->settings && d->settings->hasMaskingSettings()) {
+            result.reset(new KisPaintOpPreset());
+            result->setSettings(d->settings->createMaskingSettings());
+            if (!result->valid()) {
+                result.clear();
+            }
         }
+        d->cachedMaskingPreset = result;
     }
 
     return result;
@@ -432,6 +445,10 @@ void KisPaintOpPreset::setResourcesInterface(KisResourcesInterfaceSP resourcesIn
 {
     KIS_SAFE_ASSERT_RECOVER_RETURN(d->settings);
     d->settings->setResourcesInterface(resourcesInterface);
+
+    if (d->cachedMaskingPreset) {
+        d->cachedMaskingPreset->setResourcesInterface(resourcesInterface);
+    }
 }
 
 KoCanvasResourcesInterfaceSP KisPaintOpPreset::canvasResourcesInterface() const
@@ -443,6 +460,10 @@ void KisPaintOpPreset::setCanvasResourcesInterface(KoCanvasResourcesInterfaceSP 
 {
     KIS_SAFE_ASSERT_RECOVER_RETURN(d->settings);
     d->settings->setCanvasResourcesInterface(canvasResourcesInterface);
+
+    if (d->cachedMaskingPreset) {
+        d->cachedMaskingPreset->setCanvasResourcesInterface(canvasResourcesInterface);
+    }
 }
 
 void KisPaintOpPreset::createLocalResourcesSnapshot(KisResourcesInterfaceSP globalResourcesInterface, KoCanvasResourcesInterfaceSP canvasResourcesInterface)
@@ -531,16 +552,32 @@ QList<int> KisPaintOpPreset::requiredCanvasResources() const
     return d->settings ? d->settings->requiredCanvasResources() : QList<int>();
 }
 
+void KisPaintOpPreset::coldInitInForeground()
+{
+    if (hasMaskingPreset() && !d->cachedMaskingPreset) {
+        /// We must create the masking preset in the GUI
+        /// thread to make sure it can fetch resources from
+        /// the database
+
+        (void) createMaskingPreset();
+    }
+}
+
 void KisPaintOpPreset::coldInitInBackground()
 {
     if (d->settings) {
         d->settings->coldInitInBackground();
     }
+
+    if (d->cachedMaskingPreset) {
+        d->cachedMaskingPreset->coldInitInBackground();
+    }
 }
 
 bool KisPaintOpPreset::needsColdInitInBackground() const
 {
-    return d->settings ? d->settings->needsColdInitInBackground() : false;
+    return (d->settings && d->settings->needsColdInitInBackground()) ||
+        (d->cachedMaskingPreset && d->cachedMaskingPreset->needsColdInitInBackground());
 }
 
 KisPaintOpPreset::UpdatedPostponer::UpdatedPostponer(KisPaintOpPresetSP preset)
